# Persona-Auto-Gen

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini
examples/: advanced_usage.py  basic_usage.py
src/persona_auto_gen/: __init__.py  config.py  main.py
src/persona_auto_gen/agents/: __init__.py  nodes.py  workflow.py
src/persona_auto_gen/generators/: __init__.py  alarms.py  base.py  calendar.py  contacts.py  emails.py  factory.py  notes.py  reminders.py  sms.py  wallet.py
src/persona_auto_gen/schemas/: alarms.json  calendar.json  contacts.json  emails.json  notes.json  reminders.json  sms.json  wallet.json
src/persona_auto_gen/utils/: __init__.py  llm_client.py  output_manager.py  validation.py
tests/: __init__.py  conftest.py  test_config.py  test_generators.py  test_integration.py  test_llm_client.py  test_main.py  test_output_manager.py  test_validation.py
